--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,17 @@
 	          <groupId>org.apache.maven.plugins</groupId>
 	          <artifactId>maven-surefire-plugin</artifactId>
 	          <version>3.3.0</version>
+	          
+	          <configuration>
+				  <suiteXmlFiles>
+					  <suiteXmlFile></suiteXmlFile>
+				  </suiteXmlFiles>
+			  </configuration>
+			  
 	        </plugin>
+	        
+	        
+	        
 	    </plugins>
 	  </pluginManagement>
 	</build>
@@ -39,12 +49,11 @@
 	<version>4.23.0</version>
 	</dependency>
 	
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
 	<dependency>
 	    <groupId>io.cucumber</groupId>
-	    <artifactId>cucumber-junit</artifactId>
+	    <artifactId>cucumber-testng</artifactId>
 	    <version>7.18.1</version>
-	    <scope>test</scope>
 	</dependency>
 
 	
@@ -54,6 +63,14 @@
 	    <artifactId>cucumber-java</artifactId>
 	    <version>7.18.1</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-core</artifactId>
+	    <version>7.18.1</version>
+	</dependency>
+
 
 	
 	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
