xml Suite update in pom.xml by Viji

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	          
 	          <configuration>
 				  <suiteXmlFiles>
-					  <suiteXmlFile></suiteXmlFile>
+					  <suiteXmlFile>testng.xml</suiteXmlFile>
 				  </suiteXmlFiles>
 			  </configuration>
 			  
