My Final update including changes made for Parallel Test and Cross Browser Test and Extent PDF and Spark Reports

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -18,8 +18,12 @@ basefolder.datetimepattern=d-MM-YY HH-mm-ss
 extent.reporter.spark.vieworder=test,exception,category,author,device,dashboard
 
 #To configure display of additional details on dashboard
-systeminfo.os=Windows
-systeminfo.version=11
-systeminfo.user=SDET Warriors
-systeminfo.build=2.2
+systeminfo.Environment=QA
 systeminfo.Appname = DS-ALGO
+systeminfo.Tested-By=SDET Warriors
+systeminfo.Build=2.2
+systeminfo.OS=Windows
+systeminfo.Version=11
+
+
+
