--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,13 @@
 	    <artifactId>ashot</artifactId>
 	    <version>1.5.4</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.3.1</version>
+		</dependency>
 
 	
  </dependencies>
